Make settings menu icon larger and fix positioning - Increase icon size from 1em to 1.8em for better visibility - Fix positioning from right:-1em to right:0 with vertical centering - Remove scale-down for outgoing-only mode - Add cursor pointer and padding for better UX

--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -137,6 +137,7 @@ span.clear-input:hover {
     border-spacing: 0.5em;
     border-left: color(accent) solid 2px;
     padding-left: 0.5em;
+    padding-right: 2em;
 }
 
 .your-desktop input[type=text] {
@@ -312,11 +313,12 @@ div.remote-session .text > div {
 }
 
 svg#menu {
-    size: 1em;
+    size: 1.8em;
     background: none;
     padding: 0.5em;
     margin: 0.5em;
     color: color(light-text);
+    cursor: pointer;
 }
 
 .remote-session-list svg#menu {
@@ -384,7 +386,9 @@ div#myid, div#tags-label {
 
 div#myid svg#menu, div#tags-label svg#menu {
     position: absolute;
-    right: -1em;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 div#tags-label svg#menu:hover {
